<resources>
    <string name="app_name">AlayaApp</string>
    <string name="app_logo_description">AlayaApp Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_title">Login to your Account</string>
    <string name="signup_title">Create your Account</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="prompt_no_account">Don\'t have an account?</string>
    <string name="prompt_have_account">Already have an account?</string>
    <string name="link_sign_up">Sign Up</string>
    <string name="link_sign_in">Sign In</string>
    <string name="title_home">Home</string>
    <string name="title_itineraries">Itineraries</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="content_description_back_arrow">Back</string>
    <string name="preview_transport_name_taxi">Taxi</string>
    <string name="preview_transport_badge_best">Best!</string>
    <string name="preview_transport_duration_5mins">5 mins</string>
    <string name="preview_transport_price_30_50">₱30 - 50</string>
    <string name="content_desc_spot_image">Image of the tourist spot</string>
    <string name="content_desc_rating_star">Rating star icon</string>
    <string name="profile_completion_prompt">Add your remaining details for a more personalized experience and easier trip planning.</string>

    <!-- ADDED STRINGS FOR THE NEW POP-UP -->
    <string name="view_on_map">View on Map</string>
    <string name="get_directions">Get Directions</string>
    <string name="close">Close</string>
</resources>